feat(User): Super Admin should be able to create Users
Create an endpoint to for a super admin to create users
create an endpoint for Super Admin to add users

[Delivers #166265859]
