# server/db/seeders/20190528204615-demo-user.js
@@ -1,7 +1,6 @@
 /* eslint-disable no-unused-vars */
 /* eslint-disable require-jsdoc */
-import auth from '../.././helpers/auth';
-
+import auth from '../../helpers/auth';
 
 const password = auth.hashPassword('PassWord123..');
 
@@ -13,21 +12,23 @@ export function up(queryInterface, Sequelize) {
         firstName: 'John',
         lastName: 'Doe',
         email: 'john.doe@test.com',
-        password: 'password',
+        password:
+          '$2a$06$6.KeIwVJGmNJzuaQU4QC5eQScPh0HrIWmxZl1f7IlrQTLDw.Jz5Qi',
         signupMethod: 'local',
         role: 'user',
         socialId: null,
         profilePic: null
       },
       {
-          firstName: 'super',
-          lastName: 'admin',
-          email: 'super_admin@test.com',
-          password,
-          signupMethod: 'local',
-          role: 'super_admin',
-          socialId: null,
-          profilePic: null,
+        firstName: 'Jude',
+        lastName: 'Violet',
+        email: 'judeviolet@gmail.com',
+        password:
+          '$2a$06$6.KeIwVJGmNJzuaQU4QC5eQScPh0HrIWmxZl1f7IlrQTLDw.Jz5Qi',
+        signupMethod: 'local',
+        socialId: null,
+        profilePic: null,
+        role: 'super_admin'
       }
     ],
     {}
