# server/docs/hellobooks_api_doc.yaml
@@ -60,6 +60,34 @@ paths:
               schema:
                   $ref: "#/components/schemas/errorResponse"
 
+  /oauth/facebook:
+    post:
+      tags:
+        - Users
+      summary : Gets the user details from their facebook accounts, and logs the user in
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                access_token:
+                  type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/errorResponse"
+
   /auth/signup:
     post:
       tags:
@@ -102,6 +130,118 @@ paths:
                 $ref: "#/components/schemas/errorResponse"
         500:
           description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+
+  /auth/users/{role}:
+    post:
+      tags:
+        - Users
+      summary: User sign up
+      security:
+        - bearerAuth: []
+      description: Register a new user
+      parameters:
+        - in: path
+          name: role
+          schema:
+            type: string
+          required: true
+          description: The role of the user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+
+  /auth/user/{id}:
+    delete:
+      tags:
+        - Users
+      summary: Delete a user from the database
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: The role of the user
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+
+  /auth/getusers:
+    get:
+      tags:
+        - Users
+      summary: Delete a user from the database
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: query
+          required: false
+          description: To select a single user by ID
+          schema:
+            type : Integer
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        400:
+          description: Bad request
           content:
             application/json:
               schema:
